--- a/Time-Table.html
+++ b/Time-Table.html
@@ -8,8 +8,8 @@
 <body>
     <table border="1">
         <tr>
-            <td rowspan="2">Day</td>
-            <td colspan ="4">Lecture Timing</td>
+            <td rowspan="2">Day</td>    <!-- rowspan is 2; to use 2 row in one column -->
+            <td colspan ="4">Lecture Timing</td>   <!-- colspans is 4; to use 4 column in one row -->
         </tr>
         <tr>
             <td>10:30m - 11:30am</td>
@@ -42,7 +42,7 @@
         </tr>
         <tr>
             <td>Friday</td>
-            <td colspan="3"> <center>Test day</center></td>
+            <td colspan="3"> <center>Test day</center></td>    <!-- colspan is 3; to use 3 column in one row -->
         </tr>
     </table>
 </body>
